[api] group webmachine modules into api_*

--- a/api/flukso/priv/dispatch.conf
+++ b/api/flukso/priv/dispatch.conf
@@ -1,2 +1,2 @@
-{["sensor", sensor], flukso_sensor_xyz, []}.
-{["device", device], flukso_device_xyz, []}.
+{["sensor", sensor], api_sensor, []}.
+{["device", device], api_device, []}.
