--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "api/flukso/deps/esmtp"]
 	path = api/flukso/deps/esmtp
 	url = git://github.com/archaelus/esmtp.git
+[submodule "drupal/themes/framework/font-awesome"]
+	path = drupal/themes/framework/font-awesome
+	url = git://github.com/FortAwesome/Font-Awesome.git
