[tmpo] add /sensor/<sid>/tmpo/sync endpoint

--- a/api/flukso/priv/dispatch.conf
+++ b/api/flukso/priv/dispatch.conf
@@ -1,3 +1,5 @@
 {["sensor", sensor], api_sensor, []}.
+{["sensor", sensor, "tmpo", "sync"], api_tmpo_sync, []}.
+{["sensor", sensor, "tmpo", rid, lvl, bid, ext], api_tmpo, []}.
 {["device", device], api_device, []}.
 {["user", uid, "sensor"], api_user_sensor, []}.
