[tmpo] add /sensor/<sid>/tmpo/<rid>/<lvl>/>bid> endpoint

--- a/api/flukso/priv/dispatch.conf
+++ b/api/flukso/priv/dispatch.conf
@@ -1,5 +1,5 @@
 {["sensor", sensor], api_sensor, []}.
 {["sensor", sensor, "tmpo", "sync"], api_tmpo_sync, []}.
-{["sensor", sensor, "tmpo", rid, lvl, bid, ext], api_tmpo, []}.
+{["sensor", sensor, "tmpo", rid, lvl, bid], api_tmpo_block, []}.
 {["device", device], api_device, []}.
 {["user", uid, "sensor"], api_user_sensor, []}.
