[user] add user/xyz/device API endpoint

--- a/api/flukso/priv/dispatch.conf
+++ b/api/flukso/priv/dispatch.conf
@@ -2,4 +2,6 @@
 {["sensor", sensor, "tmpo", "sync"], api_tmpo_sync, []}.
 {["sensor", sensor, "tmpo", rid, lvl, bid], api_tmpo_block, []}.
 {["device", device], api_device, []}.
+{["device", device, "sensor"], api_device_sensor, []}.
 {["user", uid, "sensor"], api_user_sensor, []}.
+{["user", uid, "device"], api_user_device, []}.
